background image change to cover

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@ html, body {
 }
 body {
     background-image: url('../img/baby.jpg');
-    background-size: 100% auto;
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: left top;
 }
